fixed carousel
changed from height to width for carousel,

text is too far down now though

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,5 +210,5 @@ img {
 
 
 .carousel-item {
-    height: 100%;
-  }
+    width: 100%;
+}
